Fixed issue with overflow in the sidr bar.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -631,6 +631,7 @@ footer
 .sidebar-content {
     padding: 0px;
 	overflow-y: auto;
+    max-height:80%;
 }
 
 .edit-locale {
